--- a/UserInterface/CommandingWindow.xaml
+++ b/UserInterface/CommandingWindow.xaml
@@ -1,12 +1,20 @@
-﻿<Window x:Class="UserInterface.View.Command"
+﻿<Window x:Class="UserInterface.CommandingWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:UserInterface.View"
+        xmlns:views="clr-namespace:UserInterface.View"
+        xmlns:viewModel="clr-namespace:UserInterface.ViewModel"
         mc:Ignorable="d"
-        Title="Commanding" Height="350" Width="350" Background="#FF474747">
+        Title="Commanding window" Height="350" Width="350" Background="#FF474747" WindowStartupLocation="CenterScreen">
     <Window.Resources>
+        <DataTemplate DataType="{x:Type viewModel:CommandDisconnectorViewModel}">
+            <views:CommandDisconnectorView/>
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type viewModel:CommandBreakerViewModel}">
+            <views:CommandBreakerView/>
+        </DataTemplate>
+        
         <Style x:Key="MyButtonStyle" TargetType="Button">
             <Setter Property="OverridesDefaultStyle" Value="True"/>
             <Setter Property="Margin" Value="5"/>
@@ -31,13 +39,8 @@
             </Setter>
         </Style>
     </Window.Resources>
-    <Grid>
-        <Button Style="{StaticResource MyButtonStyle}" Content="Command" Margin="133,280,134,10" Background="#FF94E264" Foreground="#FF252525" FontFamily="Consolas" FontSize="14"/>
-        <TextBox VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Height="23" Margin="10,126,10,0" TextWrapping="Wrap" Text="1" VerticalAlignment="Top" IsEnabled="False"/>
-        <TextBox VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Height="23" Margin="10,214,10,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top"/>
-        <Label Content="Commanding..." HorizontalContentAlignment="Center" Margin="10,34,10,0" VerticalAlignment="Top" FontFamily="Consolas" FontSize="18" Foreground="#FFB1E698"/>
-        <Label Content="Current value" HorizontalContentAlignment="Center" Margin="10,100,10,0" VerticalAlignment="Top" FontFamily="Consolas" FontSize="14" Foreground="#FFE69898"/>
-        <Label Content="New value" HorizontalContentAlignment="Center" Margin="10,188,10,0" VerticalAlignment="Top" FontFamily="Consolas" FontSize="14" Foreground="#FFE69898"/>
-
+    
+    <Grid Background="#FF474747">
+        <ContentControl Content="{Binding CurrentCommandViewModel}"/>
     </Grid>
 </Window>
