--- a/UserInterface/View/MeshView.xaml
+++ b/UserInterface/View/MeshView.xaml
@@ -33,9 +33,9 @@
             </Setter>
         </Style>
     </UserControl.Resources>
-    
-    <Grid Margin="0,0,0,-30.4" Background="#FF474747">
-        <Canvas Margin="10,10,16,65.6" Background="#FF5E5E5E">
+
+    <Grid Margin="0,0,0,0" Background="#FF5E5E5E">
+        <Canvas Margin="300,0,0,0" Background="#FF5E5E5E">
 
             <Line
             X1="0" Y1="10"
